objects/User.object
<CustomObject>
    <fields>
        <fullName>Dx_APAC_No_of_times_deactivated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of no. of times deactivated</description>
        <label>No. of times deactivated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dx_APAC_No_of_times_reactivated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No. of times user is reactivated</description>
        <label>No. of times reactivated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mh_Blue_Sheet_Read_Write_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Blue Sheet License for large orgs.</description>
        <label>Blue Sheet Read Write License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_GBLReason_for_Not_deactivated__c</fullName>
        <description>Reason for why the user cannot be deactivated</description>
        <label>Reason for User Cannot be deactivated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integrated user account</fullName>
                </value>
                <value>
                    <fullName>Forecast manager</fullName>
                </value>
                <value>
                    <fullName>Lead Assignment Rule</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Direct Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>